--- a/R0_tail/inf/pers/можно убить.md
+++ b/R0_tail/inf/pers/можно убить.md
@@ -8,7 +8,7 @@ Shielder Барьер (Эрик Пелхам), Мегаватт (Нейл Пел
 скрип Squealer, Whirlygig, Металлолом (Trainwreck), сочник Mush, толкач
 Феня, Hookwolf, Кайзер (Макс Андерс)
 
-Лит, Регент
+Лит, 
 
 Можно применить Вывертом
 Цирк Circus, Über Убер, Лит Leet
