--- a/R0_tail/n8/1.2. n8.md
+++ b/R0_tail/n8/1.2. n8.md
@@ -1,326 +1,220 @@
+Timeless damage management 
 
+25.3.2011. 6:10 Мей
+	В последние дни Броктон-Бейская фриланс биржа в Drugon.Scourge, всё больше походила на помойку. Оставалось только задаваться вопросом куда смотрят модераторы.
 
-25.3.2011. 9:18 Самозванка
-	Матвей лежал на коленях у Клары и смиренно переживал "эпилептический припадок". 
+	Вот например, заказ: "Видео запись изнасилования не совершеннолетней героини."
+
+	Мей прокрутила вниз к разделу "оплата" и ей спёрло дыхание от увиденного.
+	Помимо предложения фантастической награды. Заказчик предлагал пять тысяч за обсуждение подробностей исполнения заказа.
+
+	Она кликнула, согласится и через пятнадцать секунд у неё на счёте оказалась заявленная сумма.
+
+	Мей узнала об этой бирже, всего двое суток назад от своего бывшего и уже успела выполнить пару простых задачек которые ей подобрал бот-координатор. В первый раз ей заплатили наликом в конверте, через пятнадцать минут после выполнения заказа. Просто пришел курьер, у которого она выяснила что заказ на доставку конверта был сделан еще шесть часов назад.
+
+	Мей поняла что за этой системой прячутся Предсказатели и Технари, скорее всего мафия.
+
+	Второй раз в качестве оплаты, она получила инструкции как с помощью Нейросферы, спровоцировать оргазм за десять секунд.
+
+	До вчерашнего вечера она была убеждена, что эту чушь придумали специально для порно. Сегодня же, она остро осознавала, как сильно её поломал сеанс "театра одного актёра" на котором она оказалась, будучи в своей первой банде, когда ей едва исполнилось восемнадцать.
+
+	Она вышла с кухни. Прошла мимо храпящего на её диване, бывшего гондона Джингуа. Поц завалился вчера к ней пьяный от своей Нейросферы и ей пришлось, прописать ему в табло с ноги, чтобы он понял что это единственный трах на который он может рассчитывать. А ведь она надеялась, что удасца вести с ним строго деловые отношения. Она подозревала что мудень не подозревает что она с ним рассталась. Возможно он даже думает что у них был просто перерыв, который закончился пару дней назад, когда он притащился с этими Нейросферами.
+
+	Она на носочках прошмыгнула к тумбочке. Вытащила из неё свои инструменты для вскрывания замков и выскользнула в коридор. Поднялась на этаж к Грибнику. Постучала в дверь, немного поголосила. Убедилась что ей не спешат открывать. За пятнадцать минут вскрыла замок и оказалась внутри.
+
+	Комната покрытая красно чёрной плесенью и красно зелёными узорами люминесцентных водорослей. Она уже была здесь когда Грибник предложил ей работу секретаря-администратора, для помощи с подопытными. Она открыла один из шкафчиков в лабораторной части студии. Вытащила журнал. Нашла в списках строку с "... аналог-рогипнола ...", отсюда провела пальцем левее Название: "Вырубала 2.3.7.", еще левее код "1.а.к.4.5".
+
+	Она открыла следующий шкафчик и вытащила коробку с запаянными капсулами, отобрала восемь капсул с нужным кодом и уходя захватила пистолет-иньектор под эти капсулы.
+
+25.3.2011. 9:10 За границей карантинной зоны N8.
+	Парящий Таран появился во вспышке телепорта, вместе с остальными. Его родная Миннесота исчезла, а вместо нее, он оказался в военном палаточном городке. Слева в двух сот метрах от него, горело прозрачное пламя высотой в несколько этажей. За ним сквозь дрожащий воздух, был виден Броктон бей.
+
+	Парящий Таран стоял посреди группы из десяти кейпов. К ним подошли солдаты, раздали браслеты Дракон и одинаковую чёрную униформу с бронежилетами. Сверху положили по пистолету, автомату, несколько обойм, пара гранат. На нагрудном кармане сложенной у него на руках униформы он увидел нашивку с его именем.
+
+	- Выша группа поступает в распоряжение Александрии. Ваши задачи это изъятие или устранение кейпов и значимых людей в N8. Время пребывания Симург в зоне не известно, по худшим прикидкам, она провела там от сорока часов. Все знают как пользоваться браслетами? - последовали кивки.
+
+	- Сейчас большая часть наших сил направлена на сдерживание периметра, создание безопасной зоны в юго-восточном Даунтауне и предотвращение тригеров. В городе отключены все коммуникации, но продолжает действовать вражеская мобильная сеть, заглушить её пока не удалось. Есть подозрения, что этой сетью управляет Враждебный Искусственный Интеллект(ВИИ). Пока её не устраним, будьте очень осторожны со всеми кто внутри N8 пользуется этой сетью. Не суйтесь в район Трамвайного Депо на севере города. Люди там, теряют сознание по неизвестной причине. В Даунтауне АПП и Лунг напали на офис Новой Волны, пока обходите стороной. Не приближайтесь к базе Протектората - он взмахнул рукой в сторону залива и старой нефтяной вышки закрытой силовым полем. - Минимизируйте социальные контакты внутри зоны. Вопросы!
+
+	- Процедура Изъятия снова применяется?
+	- Только её видимость.
+	- Лунга вроде в Клетку посадили?
+	- Демон Ли, напал на конвой перевозивший Лунга. Три дня назад их видели в Нью-Йорке. Мы полагаем что он не был в Броктон - Бей одновременно с Симург. Его опять хотят взять живым.
+	- Сколько человек в зоне?
+	- У вас должен был быть предварительный инструктаж, перед прибытием. - Злобно прорычал старшина. - В карантинной зоне N8 осталось более трёх сот тысяч гражданских. Время вышло. Остальными вопросами дрочите Дракон. Приступайте и да поможет нам Бог.
+
+	Парящий Таран вместе со всеми переоделся, ровно там же где и получил снарягу. Настроил свой браслет, пролистал приказы, задержался на приказах с устранением. Принял приказ на устранение Панацеи. Браслет открыл карту города и показал предположительное место положение Панацеи. Он по удобней разместил у себя на голове шлем-противогаз и взлетел.
+
+25.3.2011. 9:15
+	Александрия обошла Лунга сзади, вцепилась пальцами ему шею, пытаясь пробить мясо и ухватится за шейные позвонки. Она взмыла вверх вместе с ним. Покидая Броктон-бей, направляясь в верхние слои атмосферы.
+
+25.3.2011. 9:20 Синелоа
+	На его рабочий телефон, позвонила директор, приказала сосредоточиться на охране территории и не тратить ресурсы на сопровождение Панацеи. Он принял приказ и повесил трубку.
+
+	Панацея, Рыцарь, Слава и Лазер-Шоу вошли в здание и отправились к зараженной комнате.
+
+	Когда засевшая в голове песня вдруг отступила. Он выдал себе мысленного леща за то что не спросил у Пиггот пароли. Еще одного он себе выдал, за то что пустил Панацею в зараженную палатку, без хотя бы респиратора. Это было нарушением протокола. Связи с базой, всё еще не было. Но он хотя бы выдал Рыцарю и Славе по рации, для быстрой связи с его командой.
+
+	Лазер-Шоу вылетела из окна на пятом этаже и взмыла на крышу.
+
+	" - Какого чёрта директриса звонила мне лично?"
+
+	Вопросы, начали накапливаться в его голове.
+
+25.3.2011. 9:20 Самозванка
+	Крыша была укрыта грибами и разноцветной плесенью в её центре Матвей лежал на коленях у Клары и смиренно переживал "эпилептический припадок". Однажды, он переживал это будучи под наблюдением военной исследовательской группы. Тогда было много мониторов и он видел как его Корона "меняется".
 	
-	Он копировал её силу и заменял ею свою предыдущюю, чем слабее та становилась, тем боль а  в центре крыши, на поле крибов и плесени и моха.
+	Сейчас, он копировал силу Клары. Впервые. И это было плохим решением. Всегда лучше копировать знакомые силы. Но рядом была только она. Оставаться со старой силой было нельзя, он её не контролировал, он даже не понимал что она делает. То есть, что она делает кроме того, что "напевает" всем ебучую Лакримозу. Он даже не хотел копировать эту "музыкальную" силу. Просто кто-то атаковал его "ментально" и его Эльф скопировал силу атакующего, чтобы защитится.
+
+	Это было типично.
+
+	Матвей чувствовал себя комфортно и знал, что это потому что Клара применяет на нём свою силу. Это было хорошо. Она смягчала процесс копирования и тревогу от терзавших его разум вопросов. На которые ответить сейчас он не мог.
+
+	Клара на самом деле не контролирует процесс исцеления? Или она специально оживила Эльфа в теле Пряди, но не её саму? 
+
+	Шакал Табаки вчера утром, оставил на кухонном столе один из флаконов в которых хранил "воспоминания". В этом "воспоминании" он просил его не тревожить ни по какому случаю, мол он будет у себя в лаборатории работать над каким-то прорывным проектом. Это была нормальная практика для их группы. Когда открывалось окно для атаки Губителя они предпочитали прятаться по дальше.
+
+	Это было типично.
+
+	Но, Шакал был болтуном и 24-часа молчания? Это просто за гранью не возможного. Он не любил технику с часами, он ненавидел часы. Ненавидел до помутнения рассудка.
+
+	Не типично, когда тело состайницы которую ты знаешь несколько жизней, захватывает Эльф. Претворяется ею настолько хорошо что даже самые чуткие "носы" не понимают что происходит. А потом эта штука сдаётся американским спецслужбам. 
+
+	Не типично, когда люди с которыми ты провёл последние лет пятнадцать. С которыми ты никогда не терял контакт дольше чем на 12 часов. Исчезают на сутки в период окна, для атаки Губителя. Ни смс, ни голосового, ни посыльного, ни подозрительного шелеста еловыми ветками.
+
+	- Странно что ты еще жив, — говорит Клара нежно гладя пальцами Матвея по щеке. С их последней встречи ей едва исполнилось 16, а его возраст перевалил за тридцать. Ему неловко от того что он разыскал её только когда ему понадобилось исцелить другую. И она знает это.
+
+	Он не спорит, ему тоже это странно. Он вспоминает как в детстве, за ними охотились используя технарское устройство позволяющее видеть следы оставляемые в пространстве излом-формой его состайников. Он вспоминает Москву, и Бегемота, и как резко дела пошли на лад, когда стало ясно что ядерное оружие монстру до пизды, а сдержать рост, паралюдей казнями, не получится.
 	
-	Говорит двоим нужно зжечь грибы клара говорит что они живые и она может с ними говорить.
+	В небе над ними появляется красотка с соблазнительной фигурой и в обтягивающем трико. Матвей узнаёт её, она помогала сдерживать Лунга.
 
-25.3.2011. 9:20 Кристал Пелхэм
-	По указке Панацеии Лазершоу на крышу жечь грибы
-	лазершоу видит создание зоны отчуждения получает
+	Красотка нависает над ними. Давая фантастический обзор.
 
-25.3.2011. 9:20 Бомба
-	от шизика пуля бфг
+	- Эти организмы опасны, я должна их зачистить...
+	- Нееет! - Клара вскакивает - Ты не можешь, они живые, они разумны, я говорила с ними!
+
+	Клара встревоженно стучит себя ладошкой в грудь.
+
+25.3.2011. 9:22 Кристал Пелхэм
+	На её стороне были статус героя и репутация, а против неё были обжабаный грибами подросток и мужчина которому стоило бы оказаться её отцом.
+
+	Оба в одеждах серых и грязно-коричневых цветов. На каждом по похожему свитеру и одинаковые мокасины. Штаны мужчины были испачканы в грязи по колено. Девочка в юбке, вязаной шапке и на тонких ножках.
+
+	Мужчина был высок, не брит, патлат и в веснушках.
+
+	Девочка невысокого роста с бледным заостренным личиком и крупными светлыми глазами.
 	
+	Когда девочка встала и заговорила про "разумные" грибы, пытаясь выставить карантинные меры подобием геноцида, мужчина остался лежать. Веснушчатый смотрел на Лазершоу из под прикрытых век. Ей казалось, что она чувствует как его взгляд, ползает по её фигуре пока она нависает, глядя сверху вниз.
 
+	" - Почему он не встаёт? Может они не наркоманы, а заражены токсинами плесени?"
 
+	Девочка говорила не громко и Лазер-шоу спустилась по ниже чтобы лучше слышать. В конце концов, драматический эффект от её появления уже получен. Респиратор выданий ей Синелоа она одела на лицо и вытянула руки, собираясь жечь. 
 
+	" - Этих двоих потом передадим Панацее, а сейчас нужно не допустить чтобы споры с этой крыши разноситься ветром по всему городу."
 
+	Грохот взрывов, заставил её вздрогнуть. Она огляделась и не веря глазам взмыла по выше. Вдоль  границ города летели военные самолёты и дроны Дракон. Одни сбрасывали бомбы громко и ярко взрывающиеся, другие следом забрасывали взорванную и очищенную от зданий территорию, чем-то от чего воздух кипел на высоту трёх этажей.
 
+	Кристал поняла что видит создание зоны отчуждения. За ней поставят забор, а потом и стену.
 
+	Никакой сирены оповещающей об эвакуации не было.
 
+25.3.2011. 9:22 Бомба
+	Стоило раздаться грохоту взрывов, как он понял что это момент истины. Он выпустил бинокль, припал к винтовке открывая оптику.
 
+	"- И вдох выдох! И вдох ..., ааа нахуй!"
 
+	Первый выстрел из крупнокалиберной снайперской винтовки военного образца,  пулей BFG пятидесятого калибра, остался без должного внимания.
 
+	Всеми, кроме Лазер-Шоу и Самозванки с Матвеем, на которых героиня свалилась с небес, хлестая кишками по ветру. 
+(не слишком ли это не реалистично?)
 
+25.3.2011. 9:22 Все
+	Слава подлетает к окну и распахивает его, ставя ножку в белом сапожке на подоконник. Она хочет взлететь по выше и глянуть, что там за грохот.
 
+	Рыцарь хочет попросить её быть осторожней. Его озаряет догадка, о возможном калибре. Слава излучает храбрость и решимость своей аурой. Рыцарь прыгает к ней в иррациональном и не обоснованном героическом порыве, убрать её от окна. Обвивает её за талию. Она это замечает с долей удивления и тормозит свой полёт, поддаваясь давлению ладоней её парня. 
 
+	Вторая пуля проходит мимо цели и разбивает силовое поле Славы. Рыцарь проскальзывает между ней и окном.
 
+	Третья пуля попадает в цель. Рыцарь таранит Славу лбом в грудину. Они оба падают на пол под окном, заваливаясь на бок. В ужасающей тишине слышно как на пол сыпятся осколки разбитого шлема-силовой-брони Рыцаря. Она наконец делает вдох, сквозь боль и слёзы, едва дыша берёт Рыцаря за шлем и поднимает его от своей груди, чтобы посмотреть в лицо. Её поле снова активно. Она смотрит в его закрытые глаза и пытается щюпать пульс, когда...
 
+	Четвёртая пуля делает невозможное, она пробивает стену под окном, проходит возле руки славы с включённым силовым полем и взрывает нижнюю челюсть её парня.
+	
+	Её аура взрывается страхом и яростью. 
 
+	Панацея вжимаясь в стену этой же комнаты, по дальше от окна, слушает как из рации, раздаётся знакомый ей голос Полярника. Он просит помощи, на крыше кто-то с пулевым ранением в животе и сильной контузией.
 
+	Пару дней назад она отказала ему в исцелении, рядом были более травмированные люди. А вчера, Керол показала ей фото которое им прислали из СКП. Там переживали что парачеловек на фото, может попытаться скопировать её силы. Это был он, Полярник, Матвей, один из Перекидышей.
 
+	Она неслучайно запомнила его. С тех пор как несколько месяцев назад Гриб привлёк её внимание к вопросу памяти, она синтезировала себе вещества улучшающие кровообращение в мозге. Она стыдилась обращаться за ними к врачу. Ей было страшно, от того что кто-то кроме неё, узнает что она не благодарная дочь и хочет вспомнить своих биологических родителей. Ведь тайну, которую знают двое, можно сохранить только когда один из них умрёт.
 
+	Её пронзило от осознания, что вероятно раненый человек на крыше это Кристалл.
 
+	Емми сразу всё поняла. Это ловушка, чтобы скопировать её силы, а Кристал возможно даже мертва. Этого стоило бы ожидать от русских военных преступников.
 
+	Из рации раздаётся голос Синелоа:
+	- Стрелок устранён! Мы идём к вам! 
 
+	Это словно сбросило с Панацеи оцепенение и она выбежала из комнаты, слыша позади крик Славы:
+	- Стой... - Панацея знала о чём будет просить её сестра и знала что не сможет сказать ей "Да".
 
+	Выбежав в коридор она едва успела сделать два шага к лифту когда её в плече, больно укололи. Она взвизгнула пытаясь отстранится, но Джингуа крепко вцепился в её плече. Он уебал её под дых, кулаком в толстой резиновой перчатке и тяжело сопя через респиратор, быстро потащил к лифту.
 
+	Там его уже ждала Мей, которая искренне не ожидала так удачно наткнутся на выбранную героиню, а потому уже позволила, лифту уехать и теперь судорожно стучала по клавише вызова лифта.
 
+	Слава с Рыцарем на буксире влетает в коридор, ужасая и шокируя своей аурой. Джингуа и Мей напуганы, но не впечатлены, их и так таращит неромедиаторными коктейлями от их Нейросфер.
 
+	"- Панацея исправит... - молится Слава."
 
+	Джингуа орёт, вскидывает волыну и стреляет. Слава прикрывается Рыцарем напоминая себе что его силовая броня выдерживает калибр вплоть до магнума.
+	Толкнув своего парня вперёд, она сбивает стреляющего с ног. Мей прижимаясь спиной к дверям лифта стреляет с Славу, зная что это бесполезно, а Слава влетает ей коленями в живот и продолжая парить валит женщину на спину, на пол коридора. Мей на усилителях из своей Нейросферы, успешно сопротивляется попыткам Славы вырвать у неё пистолет.
 
+	Поле Славы включается и та вырывает из рук Мей пистолет, ломает его сжав в кулаке и всаживает его рукоятку в лицо азиатки.
 
+	"- Панацея исправит... - думает Слава, глядя на свою жертву."
 
+	Четыре выстрела и еще два пустых щелчка. Слава падает. Джингуа захлёбывается в тихой истерике, падает на колени у своей девушки. Шепчет "- За что? Боже, за что?". Гладит кончиками пальцев раскуроченное лицо возлюбленной.
 
+	Он слышит топот ботинок по лестнице. Хватает Панацею, как предсмертное желание Мей и бежит с ней прочь от лестницы вглубь коридора. Последняя дверь. Общий туалет. Он заходит туда. Закрывается в кабинке. Роняет героиню на пол не заботясь что её ноги кто-то может увидеть. Садится на бачок, достаёт жменю патронов и принимается перезаряжать обойму. Злоупотребление нейромедиаторами с помощью Нейросферы, её боевой стимулятор и пережитый стресс приводят к такому тремору, что он просто не попадает пулей в обойму, одна за одной они выскакивают у него из дрожащих пальцев.
 
+25.3.2011. 9:25 Син
+	В коридоре лежало три тела, Второй и Третий проверили пульс у Рыцаря и Славы. Второй кивнул. Достал у себя из бокового кармана шприц ручку с регенерирующей сыроваткой, вколол ей в плечё. Взял девочку на руки, нажал кнопку вызова лифта.
 
+	Третий остальным по рации, сообщил обстановку. Его голос прозвучал из рации лежащей под стеной. Он её подобрал. Это была одна из тех двух раций которые Синелоа выдал героям, когда они пошли внутрь.
 
+	В окно на противоположном конце коридора, влетел парачеловек в военной экипировке. На его бронежилете, трафаретом желтого цвета, было написано "КАРАНТИННАЯ ЗОНА N8". Он был в противогазе. Одну руку он поднял в мирном жесте, автомат во второй он направил дулом в пол.
 
+	Он подлетел к ним, остановившись на рстоянии трёх метров.
 
+	- Ваши коллеги внизу, сказали что Панацея с вами. У меня приказ на Извлечение. - его голос приглушенно раздавался из-под полного шлема и дублировался из браслета Дракон, уже более отчётливо.
 
+	У Синелоа зазвонил телефон. Глянув на экран он принял вызов от директора СКП Емили Пиггот и сказал кейпу:
 
+	- Сами её ищем. - Син поднял палец призывая к тишине, и приложил телефон к уху.
 
+	Но кейп продолжил:
+	- Мобильная сеть 3g_N8 скомпрометирована...
+	Одновременно с этим в трубке раздался крик директрисы:
+	- Кейп рядом с вами, бомба Симург, стреляйте на поражение!!!
 
+	Кейп дёрнулся. Син стоял к нему боком и движением мышц левой руки, активировал щит у себя на предплечье, тот разложился как прямоугольное оригами. Закрывая от кейпа. Син тут же получил очередь в щит и в окошко с усиленным стеклом. Которое тут же пошло трещинами. Выхватив правой рукой тех-пушку, он не глядя пальнул во врага, высунув ствол из-за щита.
 
+	Автоматная очередь скользнула по щиту, прошлась по Третьему и бросившему Славу Второму, когда те успели сделать по выстрелу во взлетающего под потолок врага. Оба упали как срезанные.
 
+	Син увидел падающую рядом с ним гранату и побежал под врага прикрывая голову щитом, одновременно прочь от гранаты. Враг в полёте, открыл огонь по щиту, пока Син наугад стрелял из-за щита бежа под врагом. Окошко в щите сломилось и пропустило пулю, та потеряв большую часть импульса остановилась об каску.
 
+	Враг прекратил огонь. Син почествовал что цель поражена. Крутанулся выставляя щит в сторону гранаты и блеванул.
 
+25.3.2011. 9:25:32 Джингуа
+	Он зарядил три пули в обойму, когда в коридоре началась перестрелка. Он немедленно вскочил на туалетный бачок, в полный рост, выглядывая сверху из туалетной кабинки. Он держал на прицеле вход и был готов ко всему.
 
+	Спохватившись он вставил обойму с тремя патронами в пистолет, взвёл курок и ...
+	Снаружи громыхнуло так, что у него на секунду аж уши заложило.
 
+	Панацея издала не внятный звук. Пришлось спуститься и вколоть ей еще порцию препарата который предоставил им заказчик, для выполнения заказа.
 
+	Джингуа выглянул в коридор, оценил обстановку. Взвалив Панацею на плече, вышел в коридор. 
 
+	Здесь было темно, черно, витала пыль и дым. Дышать было больно. Три источника света. Окна на концах коридора и окна дающие свет с лестничной клетки в центре длинного коридора на двадцать комнат.
 
+	Он передвигался мелким шагом с пистолетом на вытянутой руке. Сквозь дым, гарь, и пыль. Прошел мимо двух СКП-шников светящих мясом и красными костями, мимо Рыцаря. Дойдя до лестницы он остановился. Впереди был лифт. Рядом с ним Мей и Слава.
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-25.3.2011. 9:13
-	стрелок скп под совет технаря из супер пушки убивает шызика
-	замес на улице с мертвецом
-	сер результаты по крови панацеи, по мимо предписанного её лекарства у неё в крови найдены следы ЛСД
-	проблемы со связью шумы. следуйте протоколу ТДМ
-
-	клара её хилит появляется кейп телепортер забирает лазершоу прежде чем та успевает возразить. думает что клара и мак гражданские.
-
-	слава к окну собираяясь выбить раму стреляли с противоположного дома свеху вниз рыцарь хватает её за талию в попытке оттащить от окна она ламает руками  раму замечает руку у себя на поясе и останавливается рыцарь под её енерцией пролетает немного вперёд	вторая пуля разбивает силовое поле 
-
-	рыцарь по енерции двигается вперёд тормозит ногами оказывается между висящей в воздухе славой и разломаным окном у нев нет сил сдвинуть её
-	третья пуля попадает в затылок его шлема
-	лбом шлема он врезается в грудь своей девушке и ламает ей ребра. Они как подкошеные падают под окно.
-	сквозь боль и слёзы слава едва дыша берёт рыцаря за шлем и поднимает его от своей груди чтобы посмотреть в лиццо она не может вымосвить ни слова от боли в груди. струдом делает вдох маленикими порциями
-	четвёртая пуля делает невозможное она пробивает стену под окном, проходит мимо руки славы с включённым силовым полем и взрывает его нижнюю челюсть незащищённую бронёй
-	аура славы взрывается страхом и яростью
-
-	Разум Панацеи затапливает первобытный ужас и в инстинктивном порыве  она бежит в коридор там налетает на джингуа и мей ей вкалывают тракнвилизатор
-	слава коридор прикрылась рыцарем швырнула его в джингуа. разбила шит мей повалила мей борьба за ствол поле вкл стволом тупой стороной в лиццо мей выстрел пуля из пистолета мей в руках славы вылетает в лиццо славы останавливается об силовое поле джингуа всаживает в славу две пули.
-	хватает панацею слышит на леснице крик синелоа бежит в противоположный конец прячется в туалете с панацеей.
-
-
-
-
-
-
-
-25.3.2011. 9:20
-	синелоа и кейп александрии
-	синелоа звонок по н8 от директрисы кейп враг
-	кейпА. н8 скомпрометирована.
-
-	бросок граната автомат вперёд и вверх
-	синелова щит очередь на щит выстрел не глядя проходит под ногами кейпА
-	кейпА очередь по второму стоявшему3 спиной и третьему не раскрывшиму щит третий выстрел ранит руку сваривает локоть
-	синелоа прикрываясь сщитом забегает под кейпА стреляет на угад интуитивно понимает что цель поражена. разворачивается щитом к гранате.
-
-25.3.2011. 9:20:27
-	джингуа оглушительный взрыв. выглядывает наружу. всё чёрное в пыли дыму из разбитой оконной рамы льются лучи света в которых пляшет пыль дым и смог. Джингуа акуратно проходит по коридору переступая через мясокровь кишки рёбра трупы героев. доходит до лесницы слышет стон синелоа и убегает по лесснице вверх к себе. ебать панацею.
-
-25.3.2011. 9:20:27
-	технарь тем временем растворяет удерживающую пену и посыпает сухим горючим грибы.
-
-	нейросферы активируют местных. открывают огонь по машыне СКП из мелко калиберных ружей. ранят водилу он газует они уезжают врезаются в здание рядом. машина задом к много этажке стрелки палят стрелок сцыкует выходить.
-	местные снизу нападают на технаря.
-
-25.3.2011. 9:20:27
-	грибоместные координируются на нейросферу джингуа который отказался валить панацею пока не выполнит заказ. Синелоа идёт за ними на этаже шум они ломают все двери подряд.
-
-	находят нужную врываются зовут другдруга Синелоа заглядывает следом реагирует на занесённый молоток. открывает огонь врывается в комнату. его тушат молотком в ухо.  он падает застреливает молотка. сзади на него нападают и спереди вставляют нож в шею он изворачиватся стреляет в напавшего падает наспину под двумя трупами. джингуа на нервах кричит и стреляет попадает в трупа видит как синелоа направляет на него пистолет отступает назад стреляет в пол рядом с головой в бронежелет синелоа двумя точными выстрелами прекращает истерику Джингуа. Сбрасывает с себя трупы. набедренного кармана вытаскивает регенерирующую сзыроватку и вкалывает её себе в лоокоть. доползает до кровати. залазит на неё опирается на стену кладёт панацею спиной себе на ноги. находит шприц со стероидами и метаболитами подготовленными для нейтрализации ядов и наркотиков. вкалывает панацее. ствол ей на пузико прикрыв глаза слушает и ждёт
-
-	кровь из глотки ей на лиццо двое заглянули вгости у них нейросферы синелоа их валит. панацея его парализует пытается выбежать из комнаты получет нож в живот разворачивается бежит обратно получает тесаком по голове дотягивается до ноги синелоа запускает пальцы под штанину касается кожи
-
-	синелоа ебашит всех прячется с панацеей в ванной вкалывает ей реген
-
-	мясокровь кишки замес в ванной. из ванной вылетает супер синелоа ебашыт всех.
-
-	они пробираются по коридору находят славу панацея воскрешает славу.
-
-25.3.2011. 9:20:27
-	саламандра сжигает грибы на крыше с вертолёта. спускается сжигать грибы внизу.
-	летающий кирпичь и решала и их шестёрки при синелоа пресинг деф грибы
-	принуждение панацеи потрошение славы нарко панацея перерождение дмт\сальвинорин. Согласие устраняет паразиты и вирусы.
-	есть подозрение что его смерть не решит проблему они просто станут более самостоятельными с одним проще договорится.
-	панацея помагает грибника собрать и поместить в аквариум
-	аквариум увозят
-
-25.3.2011. 9:20:27
-	блаблабла александрия и ейдолон переодеваются в свои костюмы.
-	ейдолон улетает заниматся угрозой а класса на кладвище кораблей. александрия узнаёт о нападегнии на аквариум прилетает что спёрли череп.
-	ныряет в жилой дом через окно залетает в ванную здесь пусто портал к воришкам рывок вперёд 
-
-	из окон потоки воды на пять метров вперёд.
-
-	бледный и мертвец в скафандре на морском дне у подводной лодки. тянет их в портал александрия хватает их возвращается пробивает спиной пол сплёвывет солёную воду бросает их напол пробивает их маски ударами кулака. где череп у меня в рюкзаке за спиной.
-
-	бледный хрустит стеклом или грёт ампулу с ядом ебанутые русские. она всё еще тяжело дышит. протягивает руки к его рту собираять разорвать его и не дать принять яд. бледный выдыхаает александрия слышет запахи
-
-	флешбек крыса прядь васелиск.
-
-25.3.2011. 9:20:27
-	слава панацея сбегают благодаря усилению ауры славы в 10 раз.
-	ето повреждает твой мозг я сейчас исправлю так ты теперь работаешь с мозгом?
-
-25.3.2011. 9:20:27
-	что с александрией? бледный замочил её в параше.
-	тоесть нас теперь убют
-	она жива но меседж думаю уловила
-	где табаки? незнаю. я был у него его нет на месте и пропали все флаконы с восспоминаниями.
-	где ральф на подводке.
-
-	табаки с вскрытым черепом парализованый в его голове ковыряются шприца роботы. Василиск микро версия в канализации использует силы табаки чтобы производить воспоминалочки и вызывать галлюцинации у всех кто заходит на територию трамвайного депо.
-
-25.3.2011. 9:20:27
-	отчёт скп
-		в раёне трамвайного депо люди галуются на галлюцинации с событиями из прошлого будущего и настоящего иногда реальные события ингда нет но всегда события не отличимы от реальности и ненаполнены сновиденческим бредом на время действия галлюцинаций жертва оказывается беспомощьна и безсознательна. силы мыслителей ясновидящих и предсказателей сбоят когда они сосредатачиваются на этой територии.
-
-		в раёне кладбища кораблей мини-губитель
-
-		юго восток оцеплен мы перемещаем туда самых надёжных и стабильных людей прошедших процедуру изоляции и первый етап изятия все они временно будут размещены там пока мы не решим можно ли кого либо выпустить.
-
-		доки запад центр люди заражаются спящими вирусами
-
-		доки восток заражение нейросферами
-
-		мы установили стабильную мобильную связь для внутреннего пользования.[[1.1.]]
-
-		мы всё еще собираем ретрансляторы сети н8 василиск. 
-
-		александрия влетает в зал заседаний и разносит голову пряди вылетьает с трупом за окном ейдолон сжигает труп в руках александрии. та возвращается и кладёт на стол приказ на убийство Пряди\Моны\Крысы\Василиск. Указ подписан деректрисой коста браун в соответствии с правани которыми она наделяется во время кризисов вроде возникновения карантинных зон симург.
-
-		на сегодня бб самая територия с многочисленным населегнием это безпрецедентно. [[1.1.]]
-		кордон установлен зона отчуждения готова.
-		пляж перекрыт.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-Лия(RedHood)
-
-
-
-	редхуд
-			уничтожение папыного дома 
-		4Слава
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	поиск отца воспоминание дом отца посещение дом адвокат маркиз
-	психотерапия софи провокация тейла атака симург
-	или новость про плесневый дом ей интересно посмотреть что там и как
-	стресс безсонница,
-		слава рыцарь ярость на рыцаря, слава влюбила в себя рыцаря рыцарь влюбил в себя славу симбиоз зависимость слава влюбила в себя панацею своей аурой. Рыцарь своей силой соблазняет Славу на секас. 
-		Рыцарь уговорит славу притащить Емми в психотерапию.
-		в депривации сна кофейня рыцарь чаепитие воспоминание об чаепитии с маркизом
-	психотерапевт лечение таблетки размышления
-		я думала о том как востановить утеряные воспоминания и пыталась востановить свои
-		больница, я забыла своих детей
-	увидеть ошибочность своих убеждений грибника фраза
-		мать умерла от рака
-	Емми было шесть лет пять с матерью один с отцом, смутные воспоминания об отце.
-	кукольное чаепитие
-	- Я вспомнила чаепитие с Маркизом. Вспомнила большой особняк и лес. По искала особняки в Броктон-бей. Пришла туда, там жили другие люди. Через риелторское агенство я узнала фамилию человека владевшего собняком десять лет назад. Лавере. Я попыталась узнать больше у Марка но он ушел от разговора. Я пошла в архив библиотеки. Среди оцифрованых статей из старых газет нашла упоминание особняка принадлежавшего некоему Лавере, изятого у него в ходе процедуры ареста имущества, и  проданого администрацией города на аукционе. Нашла адвоката отстаивавшего интересы владельца особняка. Нашла фирму в которой работал этот адвокат, пришла туда, у них оставила свои контактные данные. Адвокат был уже на пенсии. Контора передала ему мои контактные данные и он мне позвонил. Сказал что мой отец оставил мне видео, на случай если я захочу с ним связаться. посетила руины его старого дома на окраине Броктон-бей. Большой дом в лесу под горами. принятие воспоминание гугление адвокат маркиза контакт с адвокатом вошотц хотел передать это вам если вы однажды станете его искать
-	слава сиди диск в комнате емми пропала
-
-	- Откуда это у тебя? - спросила Виктория.
-	- От адвоката Маркиза.
-	- Почему он прислал это тебе?
-	психотерапия груповая, контроль гнева. лекарства
-	Софи провокация > нападение на тейлу
-	fass berton
-
-
-
+	Дальше еще два человека в униформе. Один с большой страшной волыной застонал и зашевелился. Джингуа побежал вверх по лестнице перепрыгивая через две ступеньки.
