--- a/R0_tail/n8/структура 4.0 .md
+++ b/R0_tail/n8/структура 4.0 .md
@@ -29,21 +29,56 @@ _____________________
 	мак рана панацея хилит его он копирует её силу пока не получет версию приемлимую и это провацирует Симург на атаку
 		ретригер или почкование?
 23.3.2011.
-	сылы предсказателей в броктон бей начинают сбоить
 	Симург устанавливает свою технику в закрытом канализациионном коллекторе под центром.
 24.3.2011.
-	Васелиску приходит необзодимая техника и она её прячет  устраивает там серверную. Подключает ретрансляторы к мобильным вышкам.в подвалах под Трамвайным депо.
+	Прядь + Табаки = благие намерения?
+		Прячутся от Стаи в Лесу выпрыгивают на короткое время прежде чем своим запахом создадут точку входа. Занимаются ИИ.
+		Васелиску приходит необходимая техника и она её прячет  устраивает там серверную. Подключает ретрансляторы к мобильным вышкам.в подвалах под Трамвайным депо. На поверхности. Вырубают людей запахами.
 	Зиз
-		копирует технологию дракон и святого чтобы скопировать ИИ создать фриланс биржу и устроить рубилово
-		дата центр ИИ в канализации под городом
-		датацентр ИИ создающих шумы глушило для техники в другом конце города в кнализации
-		для этого использовала Прядь
+		Копирует технологию Дракон и Пряди чтобы скопировать ИИ захватить фриланс биржу и устроить рубилово. Дата центр ИИ в канализации под городом, на квантовом процессоре из китайского спутника. Рядом с табаки\прядь в раёне где вырубают людей запахами.
 		грибник заказы на фрилансе страннее и страннее
+	сылы предсказателей в броктон бей начинают сбоить
+
+25.3.2011 
+	Смерть Грибника. Беги от Мака, он скопировал силу Симург.
+
+	Бледный Рыжий за Лабиринт по наводке Прядь\Табаки
+
+	8:00
+		Прядь\Василиск здаётся в СКП, "я слышала песню Зиз" и у меня в голове Василиск.
+
+	Стая: Бледный, Рыжий, Мертвец мы уже воскресили Прядь может больше не нужно?
+
+	Быть безумней, Пятнадцать лет и где результат?
+
+	Нужна территория защищенная от вторжения. Бледный+Лабиринт дефают зону с ИИ при помощи технарения Табаки. Дыбают Суку.
+
+	О боже они бросят на город ядерную ракету. Может но там Мертвец так что нам до пизды. он выстоит в прошлый раз выстоял.
+	Мертвец тест Нейросферы.Думаю из этих малышек можно вырастить грибы жрущие радиационный фон, нужен Грибник. Нужна Самозванка или Панацея.
+
+	Лабиринт+Бледный+флаконтабаки изломЛес. Датацентры ИИ Пряди перенесены в Лес. Енергия? Город обесточен. Нет связи.
+
+	Работает только устройство Зиз с ИИ фриланс Биржей, шумы. Замечает СКП посылает туда стрелков-движков отряд СКП в противогазах. Если йобнет мы хз чё будет и чё оно делает?
+	Это устройство из ИИПряди+Табаки+Лиит.
+
+истории 
+Прядь и Дрём и Гриб делали ИИ на квантовых процессорах и нейросферах, крик Зиз, ИИ в Лес. 
+	Прядь в СКП.
+		Галлюцинации, память Золотое Утро. Мы знаем что в 2012 году атака со стороны США убила боле 90% населения Эвразии.
+		Что об этом думает ваше начальство?
+		Они отказались содействовать нам.
+		мы в самоволке
+
+Табаки Гриб память старичёк 
+
+Рыжий
+Бледный - Диапазон чтобы выйти за стену. оставатся на месте?
+Мертвец - на небоскрёбе ждёт ядерной ракеты, стая прячется в Лесу. 
 
 
+	Ральф ландшафт кристалы он в Лесу память зачищена на руке варезаны слова советы приказы. И результат их всех он там.
 
-
-
+	И они знают что Шакал двухдонный. Боятся его.
 
 
 
