--- a/R0_tail/inf/pers/стая/Стая.md
+++ b/R0_tail/inf/pers/стая/Стая.md
@@ -1,18 +1,30 @@
-[[Мак]] [[Матвей]] мужчину до сорока лет, в веснушках и костюме двойка в пиджаках коричневого или болотного цветов.
+[[Мак]] [[Матвей]] мужчину до сорока лет, в веснушках 
 1. Всегда превращается в то, что нужно другим, используя Агентов в зоне ДОМ.
 2. Восполняет енергию Агента, через аватара вылетающего в космос.
-3. Эпизоды. Шизофрения. Эпилепсия. Хор лакримоза.
+3. Эпизоды. Эпилепсия. Хор лакримоза.
+
+
+
+
 
 [[Клара]]
 1. Перевертыш. Чума.
 2. Чудеса при касании подушечками пальцев кожи (целитель, умертвитель).
 3. Эпизоды. Шабнак.
 
+
+
+
+
 [[Рыжий]][[Бром]] браслеты белый, серый и синий, мотоциклетныю броню покрытую рисунками текстуры змеиной кожи, балахон и сварочные очки хамелион.
 1. Перевертыш переходит (или переводит) в Форму которая просачиваеться в Лес и при выходе из Формы вытекае в зону ДОМ.
 2. Аура\запах с радиусом 2м. Зона ДОМ.
 3. Гипноз. Вводит в транс и "заражает" дружбой. Эффект накладывается в зоне ДОМ и сохраняется когда жертва выходит из радиуса. Длится 12 часов. Работает в обе стороны.
 4. Умертвитель. Эпизодами и умышленно.
+
+
+
+
 
 
 [[Прядь]][[Мона]]
@@ -23,10 +35,16 @@
 черный панк-гранж стиль, бомбы на ногах, шаровары заканчивающиеся на средине колена резинкой, футболка до средины бедра с принтом "hail satan and trust no one", джинсовая куртка в дырках и потёртостях. Она подстриглась под мальчиковый стиль.забитый татухами рукав на левой руке
 
 
+
+
+
+
 [[бледный]] хорошего человека должно быть много джинсы, куртка и ботики, кожа и серый мех. На голове меховая шапка покрывающая голову и скрывающая глаза, натянута до рта.
 1. Перевертыш переходит (или переводит) в Форму которая просачиваеться в Лес и при выходе из Формы вытекае в зону ДОМ.
 2. Аура\запах с радиусом 2м. Зона ДОМ. Аура растёт когда он не выходит за её пределы. Бледный видит\чует, всё во всех зонах ДОМ одновременно.
 3. Одновременное восприятие инфы из разделённых зон Дом и Лес. (вероятно множественные сенсорные проекции)
+
+
 
 [[Мертвец]][[Мортимер]] [[Мортус]] 
 мужчина с короткими дредами. Он одет в темно-зеленую одежду, в милитаристском стиле с разношерстными нашивками и на правом рукаве куртки.
