конечность жизни лишает смысла категоричное
противостояние таким наркотикам как сахар, алкоголь, сибирь, сальвинорин и дмт. Сколько бы ты не кичился своей свободой воли, а все равно будешь делать только то что выгодно доминирующей автономной сущности. В нашем случае её им Капитал.

--- a/R0_tail/n8/Тремор/фея/Фея.md
+++ b/R0_tail/n8/Тремор/фея/Фея.md
@@ -1,7 +1,22 @@
 За прорезание слипшихся глазок, Крысинная Фея принимает оплату кусочками душ.
 С.Д. Сказка Самозванки к двоедушникам.
 
+отчуждённо
+яд и желчь\ярость по связи.
+Ледяное мёртвое лиццо без емоций и крови при ярости.
+Прядь звонок разговор с Клайдом, про Грибника крысу про обрастание связями
+<!-- я скоро валю из города с коммандой он может с нами и тогда станет моей -->
+он тригернул, сколько еще денег он срубит создавая яды и лекарства прежде чем сможет найти умника который скажет ему что ты в Броктон-Бей?
 
+адресс человеческий муравейник тридцать этажей, живых мертвецов в бетонных коробках
+сегодня они потянутся в верх и некоторые даже оживут
+
+кто там будет? неформалы такие тусы не ... Рыжего я займу, возможно будет Мертвец. Остальные тебя не запарят.
+
+пароль Крысинная Фея ищет Вшивую.
+
+как там бледный? 
+история против бледного чтобы показать клайду что прядь свободна.
 
 21.3.2011.
 
