паттерны js + Tremor: highjack

--- a/R0_tail/n8/Тремор/алек/алек структура.md
+++ b/R0_tail/n8/Тремор/алек/алек структура.md
@@ -1,13 +1,14 @@
+[[сомнительный черновик]]
 15.10.2010 3:05
-	подём 	лиза кипиш	стаскивание	я закатился под кровать
-	аргумменты деньги швабра репутация
-	идём без браяна он не отвечает
+	подём 	лиза кипиш	стаскивание	я закатился под кровать алек окуклился прячется аргумменты выманивают шваброй угрозами деньгами репутация  
 	фургон насильника
-	трое агентов выверта переодетых под барыг
-	отжымание грибника у СКП сталкерша и батарея
-	сварочный апарат
+	трое бойцов переодетых под барыг
+	отжымание грибника у СКП сталкерша и батарея сварочный апарат, сплетница говорит в мегафон, 
 	побег сдача грибника фургону Синегалу
-	забег перегрузка сил алека
+	забег перегрузка сил алека 
+	макет кукла грибника на спине собаки. нефы бегут через город через торговый центр. Алек мороженка.
+утро
+	гостевая+срач, душ, саб
 
 28.1.2011
 21:00 смс от лизы браяну, веди сюда алека сам в стороне
