--- a/R0_tail/n8/Тремор/лиза/реридено/лиза структура.md
+++ b/R0_tail/n8/Тремор/лиза/реридено/лиза структура.md
@@ -1,10 +1,18 @@
 19.2.2011
 	Логово Неф, Лиза составляет доску майнд карту, по Перекидышам. Ей стало тесно у себя в комнате и она перебралась в общий зал.
-	брифинг по сути. Слушают Алек Браян Сука. [[перекидыши]]
-	
+	брифинг по сути. Слушают Алек Браян Сука.
 Обсуждение Лиза Алек.
 
+Сплетница лиза
 
-Сплетница
-	Лабиринт под Холмы Сплетница, Табаки.
-вечер сплетница статуя зиз дурдом
+ПостДедПрядь
+Лиза: цели Заказчика 
+	Не помагать в спасении Пряди.
+	Выяснить 
+		как работают их телепорты выяснить слабости.
+		их цели
+		Что делают Грибник и Дрём
+
+Лабиринт под Холмы Сплетница, Табаки.
+	Вечер сплетница статуя зиз дурдом.
+
