--- a/R0_tail/n8/Тремор/Вход/Структура. Вход.md
+++ b/R0_tail/n8/Тремор/Вход/Структура. Вход.md
@@ -1,5 +1,5 @@
 [[структура-N8]]
-[[Структура. Вход. Hijack.]] 
+[[Структура. Hijack]] 
 Похищение Грибника у СКП Неформалами, перехват Грибника Перекидышами.
 Алек+Одет __ МайндКартаЛизы __ СпарингБраянТейлор+АлекЛизаБрифинг 
 
