--- a/R0_tail/n8/Тремор/Вход/лиза/сцены/старт.md
+++ b/R0_tail/n8/Тремор/Вход/лиза/сцены/старт.md
@@ -35,6 +35,17 @@
 Процесс теллепортации занимает одну-две секунды.
 Подчинение Рыжего действует от 12 часов. Сеанс психоанализа может нейтрализовать подчинение.
 Бледный трижды находил скрытые камеры у себя на этаже. Каждый раз он возвращал их наёмникам Заказчика. Первую партию скрытых камер и микрофонов он начал собирать спустя сутки с моммента как их комманда расположилась на этаже предоставленном им в качестве убежища. Он не искал, он сразу шел к ним, протягивал руку и нащупывал искомое. Анатомически, он был слеп.
+
+по наблюдениям людей подкупленных Заказчиком, Перекидыши могут переговариватся между собой без спец средств. Предельная дистанция из контакта неизвестна.
+	Слышит ли каждый из них происходящее возле каждого из них, неизвестно.
+	Исходя из данных собраных во время стычки АПП с Перекидышами на Южном холме,
+	среднее зарегистрированное время задержки между "прыжками" находится в диапазоне от 20 секунд до минуты. Задержка между исчезновением в одной точке и появлением в другой от двух секунд до минуты.
+	Лучший результат показал Бледный, три "прыжка" подряд за минуту и восемь секунд с задержкой в секунду, две и снова в секунду.
+
+
+Моя сила говорит что диапазон в котором они могут "прыгать" ограничен диапазоном от метра до двух вокруг Рыжего, Мертвеца, Пряди, Бледного. Вокруг Бледного этот диапазон иногда бывает больше зарегистрированный предел 25 метров.
+
+
 Исходя из этого принято решение действовать так будто бы он видит все скрытые и спрятаные вещи на своём этаже, видит содержимое твоих карманов и начинку твоей техники.
 Мортимер. Имеет слабое сердце, может умереть из-за "спазма лёгких". Воскресает. Каждое последующее воскрешение в диапазоне суток или двух, занимает больше времени. Из его досье предоставленного в ЕАР Крассной Рукавицей следует что был прицедент когда его убивали 10 раз за сутки, для 10 воскрешения ему потребовалось 30минут. Заказчик уже снабдил своих людей транквилизаторами которые не убъют Мортуса.
 Минимальная продемонстрированна пауза между телепортами составляет 15 секунд. Этот лучший результат принадлежит Бледному. Остальные демонстрировали паузу между телепортами не ниже 30 секкунд.
